Refinements for titles and read me

--- a/stats/parametres_sub_o.ipynb
+++ b/stats/parametres_sub_o.ipynb
@@ -17,9 +17,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import mne\n",
-    "import seaborn as sns\n",
-    "import feather\n",
+    "\n",
     "import os\n",
     "import sys\n",
     "import platform\n",
@@ -38,10 +36,9 @@
     "    os.chdir('/run/user/1000/gvfs/smb-share:server=bigdata,share=arts/Psycho/BBC/BBC/WP1/data/EEG/tsk')\n",
     "    #os.chdir('c:/Users/Engi/all/BBC/WP1/data/EEG/tsk')\n",
     "\n",
-    "import microstates.micro_constants as cs\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import base.base_constants as b_cs"
+    "\n",
+    "import matplotlib.pyplot as plt\n"
    ],
    "metadata": {
     "collapsed": false,
