--- a/stats/Behav_stats.ipynb
+++ b/stats/Behav_stats.ipynb
@@ -69,7 +69,19 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Create dataframe using directly metadata from clean data\n",
+    "## Create behavioral dataframe \n",
+    "using directly metadata from clean data"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "bcbb87f489aa319c"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "#Code to create behavioral dataframe using directly metadata from clean data\n",
     "df_list=[]\n",
     "#loop inside each epoch file and select metadata \n",
     "for g_n in b_cs.G_N:\n",
@@ -89,7 +101,18 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "b9e640c05bdbfb2a"
+   "id": "253789232ff6c00"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## load dataframe\n",
+    "in case dataframe is already created use this to load it"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "825d0170fbe583d8"
   },
   {
    "cell_type": "code",
@@ -417,6 +440,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "#generate column with % of accurate trials\n",
     "pivot_acc['corr_percentage']=pivot_acc['correct']/(pivot_acc['correct']+pivot_acc['mistake'])"
    ],
    "metadata": {
@@ -483,7 +507,7 @@
    "cell_type": "markdown",
    "source": [
     "## awareness \n",
-    "for the awareness it is important to know remove the mistakes "
+    "for the awareness it is important to remove the mistakes "
    ],
    "metadata": {
     "collapsed": false
@@ -688,6 +712,17 @@
    "id": "53fed09a4b558a75"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## cardiac phase statistics\n",
+    "anovas + post-hoc contrasts as a function of awareness and cardiac phase"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "37942b925e5adbd"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
@@ -755,6 +790,7 @@
     }
    ],
    "source": [
+    "\n",
     "pg.rm_anova(data=df_pivot_card,dv='RT',within=['cardiac_phase','awareness'],subject='g_num')"
    ],
    "metadata": {
@@ -844,6 +880,17 @@
     }
    },
    "id": "4cee39e430ff713a"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## rsp phase statistics\n",
+    "anovas + post-hoc contrasts as a function of awareness and cardiac phase"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e10ec237cac4acac"
   },
   {
    "cell_type": "code",
