finalize code corr

--- a/stats/Behav_stats.ipynb
+++ b/stats/Behav_stats.ipynb
@@ -38,7 +38,8 @@
     "import seaborn as sns\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "\n"
+    "\n",
+    "import stats.stats_helper as s_hp"
    ]
   },
   {
