Rnotebooke and behav stats

--- a/stats/Behav_stats.ipynb
+++ b/stats/Behav_stats.ipynb
@@ -16,6 +16,8 @@
     "import os\n",
     "import platform\n",
     "import sys\n",
+    "import mne\n",
+    "import base.base_constants as b_cs\n",
     "if platform.system()=='Darwin':\n",
     "    \n",
     "    sys.path.append('/Users/leupinv/BBC/WP1/data/Code/python/BBC')\n",
